# go2-terrain-curriculum

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/: go2_flat.yaml  go2_rough.yaml  go2_stairs.yaml
configs/isaac_lab/: go2_flat_rsl_rl.yaml  go2_rough_rsl_rl.yaml
docs/: experiment_plan.md
results/: initial_proxy_benchmark.md  isaac_lab_commands.txt  observation_benchmark.csv  observation_benchmark.md  proxy_benchmark.csv
scripts/: generate_observation_benchmark.py  generate_proxy_benchmark.py  render_isaac_lab_commands.py  simulate_curriculum.py
src/go2_terrain_curriculum/: __init__.py  benchmark.py  config.py  curriculum.py  isaac_lab.py  metrics.py  observation.py  reward.py
tests/: test_benchmark.py  test_config.py  test_curriculum.py  test_isaac_lab.py  test_observation.py  test_reward.py
